src/test/ui/casts-issue-46365.rs
struct Lorem {
    ipsum: Ipsum //~ ERROR cannot find type `Ipsum`
}

fn main() {
    let _foo: *mut Lorem = 0 as *mut _; // no error here
}
